# timepool-webcal

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: .docker-publish.yml.swp
src/timepool_webcal/: __init__.py  timecare_webcal.py
