[project]
name = "timepool-webcal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Johan Swetzén", email = "johan@swetzen.se" }
]
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "icalendar>=6.3.1",
    "uvicorn>=0.37.0",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
